--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -48,9 +48,9 @@
   <div id="contents">
     <img src="Karazhan_library.jpg" width="100%">
 
-    <h1>Karazhan Library</h1>
+    <h1>Karazhan Library[Lv.65]</h1>
     <p style="margin-top:45px;"><pre>
-    <h3><strong>경제</h3></strong>
+    <h2><strong>경제[Lv.27]</h2></strong>
       [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
       [대한민국 부동산 흐름 읽는법]-신진수<br>
       [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
@@ -76,58 +76,71 @@
       [세상 친절한 경제상식]-토리텔러<br>
       [머니]-롭 무어<br>
       [돈의 속성]-김승호<br>
-      [해외 ETF 백과사전]-김태현
-    <h3><strong>역사</h3></strong>
+      [해외 ETF 백과사전]-김태현<br>
+      [부자들의 습관 버티는 기술]-김광주<br>
+    <h2><strong>역사[Lv.7]</h2></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희<br>
       [알렉산드로스 제국의 눈물]-제임스 롬<br>
       [하멜표류기]-헨드릭 하멜<br>
       [하룻밤에 읽는 한국 근현대사]-최용범<br>
       [세상에서 가장 쉬운 세계사]-천레이<br>
-      [하룻밤에 읽는 한국사]-최용범
-    <h3><strong>철학</h3></strong>
+      [하룻밤에 읽는 한국사]-최용범<br>
+    <h2><strong>철학[Lv.4]</h2></strong>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
-      [인간과 좀비의 목숨을 건 철학수업]-사쿠라 츠요시
-    <h3><strong>심리학</h3></strong>
+      [인간과 좀비의 목숨을 건 철학수업]-사쿠라 츠요시<br>
+    <h2><strong>심리학[Lv.3]</h2></strong>
       [나도 아직 나를 모른다]-허지원<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
-      [삶이 괴롭냐고 심리학이 물었다]-게일 브레너
-    <h3><strong>처세술</h3></strong>
+      [삶이 괴롭냐고 심리학이 물었다]-게일 브레너<br>
+    <h2><strong>처세술[Lv.7]</h2></strong>
       [침묵이라는 무기]-코르넬리아 토프<br>
       [마음을 훔치는 대화법]-임철웅<br>
       [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤<br>
       [승자의 결단과 전략, 오륜서]-마야모토 무사시<br>
-      [제갈량문집]-제갈량
-    <h3><strong>과학</h3></strong>
+      [제갈량문집]-제갈량<br>
+      [손자병법]-손자<br>
+      [포사이트:미래를 꿰뚫어보는 힘]-비나 벤카타라만<br>
+    <h2><strong>과학[Lv.2]</h2></strong>
       [창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
-      [기억은 미래로 향한다]-한나 모니어, 마르틴 게스만
-    <h3><strong>경영</h3></strong>
+      [기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
+    <h2><strong>경영[Lv.3]</h2></strong>
       [적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단<br>
       [채리티:워터]-스캇 해리슨<br>
-      [반대의 놀라운 힘]-샬런 네메스
-    <h3><strong>소설</h3></strong>
+      [반대의 놀라운 힘]-샬런 네메스<br>
+    <h2><strong>소설[Lv.6]</h2></strong>
       [82년생 김지영]-조남주<br>
       [잠]-베르나르 베르베르<br>
       [삼국지]-나관중<br>
       [데미안]-헤르만 헤세<br>
       [위대한 개츠비]-스콧 피츠제럴드<br>
-      [별을 위한 시간]-로버트 A. 하인라인
-    <h3><strong>자기계발</h3></strong>
+      [별을 위한 시간]-로버트 A. 하인라인<br>
+    <h2><strong>자기계발[Lv.3]</h2></strong>
       [기획자의 습관]-최장순<br>
       [최강 멘탈]-쓰지 유시후미<br>
-      [지친 당신에게 고요를 선물합니다]-팀 콜린스
-    <h3><strong>에세이</h3></strong>
+      [지친 당신에게 고요를 선물합니다]-팀 콜린스<br>
+    <h2><strong>에세이[Lv.1]</h2></strong>
       [이창호의 부득탐승]-이창호
-    <h3><strong>사회</h3></strong>
+    <h2><strong>사회학[Lv.2]</h2></strong>
       [재미란 무엇인가?]-벤 핀첨<br>
-      [협력의 역설]-애덤 카헤인
+      [협력의 역설]-애덤 카헤인<br>
     </p></pre>
 
 
 
 
+
+
+    <p><pre>
+      <h2>2020년 6월 독서</h2>
+        <li>경제/경영:</li>
+        <li>역사:</li>
+        <li>철학:</li>
+        <li>심리학/처세술:[포사이트:미래를 꿰뚫어보는 힘]-비나 벤카타라만</li>
+        <li>과학:</li>
+    </p></pre>
 
     <p><pre>
       <h2>2020년 6월 독서</h2>
@@ -141,6 +154,8 @@
         <li>경제:[돈의 속성]-김승호</li>
         <li>경제:[해외 ETF 백과사전]-김태현</li>
         <li>사회:[협력의 역설]-애덤 카헤인</li>
+        <li>경제:[부자들의 습관 버티는 기술]-김광주</li>
+        <li>처세술:[손자병법]-손자</li>
     </p></pre>
 
     <p><pre>
