--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -51,6 +51,54 @@
 
 
 
+
+    [July 1st, 2020]
+
+    <p>
+      Brad Smith, the president of Microsoft, has said that instead of asking what AI can do, humans need to think about what it should do. The technological limits of naive, fallible AI, in other words, will lead humans to impose additional political and social limits upon it. Clever algorithms will have to fit into a world that is full of humans, and, in theory at least, run by them. Artificial intelligence is both powerful and limited. As that realization spreads, some of the dreams of high summer will fade in the autumnal chill.
+    </p><br>
+
+
+    [June 30th, 2020]
+
+    <p>
+      <b>data wrangling</b><br>
+      Data wrangling, sometimes referred to as data munging, is the process of transforming and mapping data from one "raw" data form into another format with the intent of making it more appropriate and valuable for a variety of downstream purposes such as analytics. A data wrangler is a person who performs these transformation operations.<br>
+
+      This may include further munging, data visualization, data aggregation, training a statistical model, as well as many other potential uses. Data munging as a process typically follows a set of general steps which begin with extracting the data in a raw form from the data source, "munging" the raw data using algorithms (e.g. sorting) or parsing the data into predefined data structures, and finally depositing the resulting content into a data sink for storage and future use.<br><br>
+
+      <b>postmortem</b><br>
+      (adj)done, occurring, or collected after death<br>
+      following the event<br>
+      (n)an analysis or discussion of an event after it is over<br>
+    </p><br>
+
+
+    [June 29th, 2020]
+
+    <p>
+      This Technology Quarterly will investigate why enthusiasm is stalling. It will argue that although modern AI techniques are powerful, they are also limited, and they can be troublesome and difficult to deploy. Those hoping to make use of AI's potential must confront two sets of problems.<br><br>
+
+      The first is practical. The machine-learning revolution has been built on three things: improved algorithms, more powerful computers on which to run them, and--thanks to the gradual digitisation of society--more data from which they can learn. Yet data are not always readily available. It is hard to use AI to monitor covid-19 transmission without a comprehensive database of everyone's movements, for instance. Even when data do exist, they can contain hidden assumptions that can trip the <b>unwary</b>. The newest AI systems' demand for computing power can be expensive. Large organisations always take time to integrate new technologies: think of electricity in the 20th century or the cloud in the 21st. None of this necessarily reduces AI's potential, but it has the effect of slowing its adoption.<br><br>
+
+      The second set of problems runs deeper, and concerns the algorithms themselves. Machine learning uses thousands or millions of examples to train a software model (the structure of which is loosely based on the neural architecture of the brain). The resulting systems can do some tasks, such as recognising images or speech, far more reliably than those programmed the traditional way with hand-crafted rules, but they are not "intelligent" in the way that most people understand the term. They are powerful pattern-recognition tools, but lack many cognitive abilities that biological brains take for granted. They struggle with reasoning, generalising from the rules they discover, and with the general-purpose savoir faire that researchers, for want of a more precise description, dub "common sense". The result is an artificial idiot savant that can excel at well-bounded tasks, but can get things very wrong if faced with unexpected input.
+    </p><br>
+
+
+    [June 28th, 2020]
+
+    <p>
+      Large-scale social change is hard.
+      Protest movements have a habit of <b>antagonising</b> the moderate supporters they need to succeed.
+      Countries where the impulse for change is not <b>harnessed</b> to specific reforms will find that it <b>dissipates</b>.
+      Yet anyone who thinks racism is too difficult to tackle might recall that just six years before George Floyd was born,
+      interracial marriage was still illegal in 16 American states.
+      Today about 90% of Americans support it.
+      When enough citizens march against an injustice, they can prevail.
+      That is the power of protest.
+    </p><br>
+
+
     [Fabuarary 1st, 2020]
 
     <p>
@@ -61,7 +109,8 @@
       / belonging to mental or spiritual life
       / belonging to the inner constitution or concealed nature of something
       / lying awy or remote from the border or shore
-    </p>
+    </p><br>
+
 
     [January 31th, 2020]
 
