--- a/Science_and_technology.html
+++ b/Science_and_technology.html
@@ -54,6 +54,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=hdVl8oKHkys" target="_blank" title="에스오디">
+      이 썸네일을 쓰는 채널들이 여러분을 어떻게 속이는지 적나라하게 보여드립니다</a><br>
+
     <a href="https://www.youtube.com/watch?v=3rLHjuyMXmQ" target="_blank" title="지식보관소">
       전자의 속도는 느리지만 전기는 빛의속도인 이유</a><br>
 
