--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,18 +52,29 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=z_xp6Awon_k" target="_blank" title="쉬운바둑">
+      정석사활 #2</a><br>
+
+    <a href="https://www.youtube.com/watch?v=gl6avV2wcso" target="_blank" title="쉬운바둑">
+      정석사활 #1</a><br>
+
+    <a href="https://www.youtube.com/watch?v=bE-ahWouiIw" target="_blank" title="쉬운바둑">
+      삼삼침투에서 한번씩 꼭 나오죠? 백을 잡는방법과 (보너스) 하나 더!</a><br>
+
+    <a href="https://www.youtube.com/watch?v=dG_EVyK-K2M" target="_blank" title="쉬운바둑">
+      귀의 기본궁도는 필수!</a><br>
 
     <a href="https://www.youtube.com/watch?v=VpEVeKVHg_o" target="_blank" title="쉬운바둑">
-      (사활문제) #99</a><br>
+      사활문제 #99</a><br>
 
     <a href="https://www.youtube.com/watch?v=B9sIu-8WeUQ" target="_blank" title="쉬운바둑">
-      (사활문제) #97</a><br>
+      사활문제 #97</a><br>
 
     <a href="https://www.youtube.com/user/TheMylove1244/videos" target="_blank" title="쉬운바둑">
-      (사활문제) #95</a><br>
+      사활문제 #95</a><br>
 
     <a href="https://www.youtube.com/watch?v=YioLC3T4xlk" target="_blank" title="쉬운바둑">
-      (사활문제 #91) 8궁도형태, 빅으로 살기 정답은 두개!</a><br>
+      사활문제 #91 8궁도형태, 빅으로 살기 정답은 두개!</a><br>
 
     <a href="https://www.youtube.com/watch?v=TnxzswOuBcU" target="_blank" title="쉬운바둑">
       한칸뛰면 큰일남..약점투성이~</a><br>
