--- a/The_economist.html
+++ b/The_economist.html
@@ -52,8 +52,23 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=VojwHDTW38g" target="_blank" title="JD부자연구소">
+    미국기업들은 왜 주가를 올리려 안달일까</a><br>
 
+  <a href="https://www.youtube.com/watch?v=gWNm-6lr9fY" target="_blank" title="자유잍튜브THE">
+    도망가지 말고 응시하라. 시장이 어디를 향하는지를.</a><br>
 
+  <a href="https://www.youtube.com/watch?v=hy0F0wV2bXE" target="_blank" title="삼프로TV_경제의신과함께">
+    마이크론의 급등, 삼성전자와 하이닉스는?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=VBWPLwPMcmQ" target="_blank" title="삼프로TV_경제의신과함께">
+    갑작스런 한한령 해제 소식에 날개단 중국 관련주</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Rs7RBzc1Xww&t=1s" target="_blank" title="삼프로TV_경제의신과함께">
+    5G의 반격 시작? 주연은 누구? f.이다솔 차장</a><br>
+
+  <a href="https://www.youtube.com/watch?v=bIK7ju6OHNU" target="_blank" title="삼프로TV_경제의신과함께">
+    빅테크 은행주 동반 약세.. 미 증시 더위 먹었나?</a><br>
 
   <a href="https://www.youtube.com/watch?v=ZqYOys6rWek" target="_blank" title="삼프로TV_경제의신과함께">
     주식 양도세 개편에 대한 김프로의 고언</a><br>
