--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -51,6 +51,25 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=tpwQFw7Fpjk" target="_blank" title="돈파는가게_세상의 모든 재테크">
+      개인과 기관투자자의 생각과 행동은 어떻게 다를까?_조성연소장(펀펀한 투자연구소)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=PTjLEwXiFNY" taregt="_blank" target="시간여행TV">
+      공지사항 & 주식계좌 수익 인증합니다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=P0jFLDS8Ptk&t=2s" taregt="_blank" target="시간여행TV">
+      99%의 개미투자자들은 모르는 꿀팁을 알려드립니다</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Utq8UtEHtl8" taregt="_blank" target="시간여행TV">
+      주식으로 117억 수익 인증 + 주식 유튜버 최초 5% 지분 공시 후기</a><br>
+
+    <a href="https://www.youtube.com/watch?v=mdnvKrJ67Os" taregt="_blank" target="시간여행TV">
+      에스모라는 회사에 투자를 하고 싶지 않은 이유</a><br>
+
+    <a href="https://www.youtube.com/watch?v=miYzOAMx0O4" taregt="_blank" target="시간여행TV">
+      무자본 M&A, 주가조작에 대해서 알려드립니다</a><br>
+
     <a href="https://www.youtube.com/watch?v=d8X1LNJjIqM" target="_blank" title="뉴욕 네사NESSA NOH">
       미국주식, 재구성 전 5,000만원 포트폴리오 공개 - WEBULL 위불 앱
 
