--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -52,6 +52,21 @@
 
 
 
+
+    [July 3rd, 2020]
+
+    <p>
+      To the agencies, and every other analyst of the country, India has always been a paradox. Its economy is large but its people are poor. Its institutions are strong enough to warrant an investment-grade rating, but its policymaking is not. Its public debt is high, its foreign debt modest. To these long-standing paradoxes, some observers add another. India, they say, is like a Monet painting. Up close, it's a big old mess. But from afar it still has the power to <b>beguile</b>.
+    </p><br>
+
+
+    [July 2nd, 2020]
+
+    <p>
+      In fact, Tencent could be a force for good if it promotes mobile gaming globally. More than two-thirds of Chinese gamers play on their smartphones, compared with just over a third of American ones; the latter have five years of catching up to do. Tencent also hopes to develop cloud-gaming, in which 5G smart phones and faster connectivity enable players to stream games as easily as films, and increase use of augmented and virtual reality in mobiles gaming. The trouble is that its partner in both endeavours in China is Huawei, which will raise hackles in America. Expect to hear more about Tencent's global gaming <b>prowess</b> in the future. Tencent, of course, will hope that his attention is not because it, too, gets caught up in Sino-American bangs and explosions.
+    </p><br>
+
+
     [July 1st, 2020]
 
     <p>
