--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -53,6 +53,9 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=sV6lLH-m40A" target="_blank" title="5분 뚝딱 철학">
+      조건문의 진리조건</a><br>
+
     <a href="https://www.youtube.com/watch?v=Mda9mjI42cg" target="_blank" title="책그림">
       말 한마디로 연봉 5천에서 1억으로 올리는 법 | 억대 연봉자만 아는 대화법</a><br>
 
