--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -52,6 +52,13 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=go3egSgZHfQ" target="_blank" title="쉬운바둑">
+      정석사활 #4</a><br>
+
+    <a href="https://www.youtube.com/watch?v=go3egSgZHfQ" target="_blank" title="쉬운바둑">
+      정석사활 #3</a><br>
+
     <a href="https://www.youtube.com/watch?v=z_xp6Awon_k" target="_blank" title="쉬운바둑">
       정석사활 #2</a><br>
 
