--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,20 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=5ZhoIaoJUWc" target="_blank" title="자유잍튜브THE">
+    시총 2위는 누가될까? 시총 상위의 변화를 주목하라</a><br>
+
+  <a href="https://www.youtube.com/watch?v=-t0NY-YJ-MQ" target="_blank" title="JD부자연구소">
+    7월 나스닥에서 가장 중요한 것은</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xhvvdZe5I4k" target="_blank" title="삼프로TV_경제의신과함께">
+    테슬라의 끝없는 질주.. 세계 자동차 시총 1위 등극</a><br>
+
+  <a href="https://www.youtube.com/watch?v=iWkTbkpoVjs" target="_blank" title="삼프로TV_경제의신과함께">
+    파월·므누신, "추가 경제지원 필요" 한목소리</a><br>
+
+  <a href="https://www.youtube.com/watch?v=dooZWQPO5-o" target="_blank" title="삼프로TV_경제의신과함께">
+    악재에 둔감한 미국시장을 경계하라</a><br>
 
   <a href="https://www.youtube.com/watch?v=VojwHDTW38g" target="_blank" title="JD부자연구소">
     미국기업들은 왜 주가를 올리려 안달일까</a><br>
