--- a/夫學須靜也_才須學也.html
+++ b/夫學須靜也_才須學也.html
@@ -51,123 +51,155 @@
 
 
 
+
+  [비용을 계산하라]
+
+    <p>
+      孫子曰(손자왈) 凡用兵之法(범용병지법) 馳車千駟(치거천사) 革車千乘(혁거천승) 帶甲十萬(대갑십만) 千里饋糧(천리궤량)<br>
+      손자는 말한다. 무릇 용병의 원칙에는 가벼운 수레 천 대와 무장한 수레 천대, 갑옷 입은 병사 10만명, 천리 길에 걸쳐 나를 식량이 필요하다.<br><br>
+
+      則內外之費(칙내외지비) 賓客之用(빈객지용) 膠漆之材(교칠지재) 車甲之奉(거갑지봉) 日費千金(일비천금) 然后十萬之師擧矣(연후십만지사거의)<br>
+      국내와 국외의 비용, 빈객 접대비, 아교와 칠에 쓰는 재료, 수레와 갑옷을 정비하는 비용 등이 하루에 천금씩 소모되므로 (이러한 준비를) 하고 난 뒤에라야 10만의 군대를 일으킬 수 있다.<br><br>
+    <p><br>
+
+
+  [싸우기 전에 계산하라]
+
+    <p>
+      夫未戰而廟算勝者(부미전이묘산승자) 得算多也(득산다야)<br>
+      전쟁을 하기 전에 묘당에서 승리를 점치는 것은 묘책이 많기 때문이고,<br><br>
+
+      未戰而廟算不勝者(미전이묘산부승자) 得算少也(득산소야)<br>
+      전쟁을 하기 전에 묘당에서 승리할 수 없다고 생각하는 자는 그 묘책이 적기 때문이다.<br><br>
+
+      多算勝(다산승) 少算不勝(소산부승)<br>
+      묘책이 많으면 승리하고, 묘책이 적으면 승리할 수 없다.<br><br>
+
+      而況無算乎(이황무산호)<br>
+      하물묘 묘책이 없음에랴!<br><br>
+
+      吾以此觀之(오이차관지) 勝負見矣(승부견의)<br>
+      내가 이러한 것에 의거해 관찰해보니 승패가 보인다.<br><br>
+    </p><br>
+
+
   [전쟁은 속임수이다]
 
     <p>
-    勢者(세자) 因利而制權也(인리이제권야)<br>
-    세는 이로움으로 權(권)을 制御(제어)할 수 있는 것이다.<br><br>
+      勢者(세자) 因利而制權也(인리이제권야)<br>
+      세는 이로움으로 權(권)을 制御(제어)할 수 있는 것이다.<br><br>
 
-    兵者(병자) 詭道也(궤도야)<br>
-    전쟁이란 서로 기만하는 것이다.<br><br>
+      兵者(병자) 詭道也(궤도야)<br>
+      전쟁이란 서로 기만하는 것이다.<br><br>
 
-    故能而示之不能(고능이시지부능)<br>
-    그러므로 능력이 있으면서도 없는 듯이 보이며,<br><br>
+      故能而示之不能(고능이시지부능)<br>
+      그러므로 능력이 있으면서도 없는 듯이 보이며,<br><br>
 
-    用而示之不用(용이시지부용)<br>
-    쓰고 있으면서도 쓰지 않는 것처럼 보이고,<br><br>
+      用而示之不用(용이시지부용)<br>
+      쓰고 있으면서도 쓰지 않는 것처럼 보이고,<br><br>
 
-    近而示之遠(근이시지원)<br>
-    가까이 다가가면서도 멀리 떠나는 것처럼 보이고,<br><br>
+      近而示之遠(근이시지원)<br>
+      가까이 다가가면서도 멀리 떠나는 것처럼 보이고,<br><br>
 
-    遠而示之近(원이시지근)<br>
-    멀리 가면서도 가까이 다가가는 것처럼 위장해 보인다.<br><br>
+      遠而示之近(원이시지근)<br>
+      멀리 가면서도 가까이 다가가는 것처럼 위장해 보인다.<br><br>
 
-    利而誘之(이이유지)<br>
-    이롭게 해서 유인한다.<br><br>
+      利而誘之(이이유지)<br>
+      이롭게 해서 유인한다.<br><br>
 
-    亂而取之(난이취지)<br>
-    혼란하게 한 다음 취한다.<br><br>
+      亂而取之(난이취지)<br>
+      혼란하게 한 다음 취한다.<br><br>
 
-    實而備之(실이비지)<br>
-    적의 힘이 건실하면 이에 대비한다.<br><br>
+      實而備之(실이비지)<br>
+      적의 힘이 건실하면 이에 대비한다.<br><br>
 
-    强而避之(강이피지)<br>
-    적이 강하면 이를 피한다.<br><br>
+      强而避之(강이피지)<br>
+      적이 강하면 이를 피한다.<br><br>
 
-    怒而撓之(노이요지)<br>
-    성나게 해서 어지럽게 만든다.<br><br>
+      怒而撓之(노이요지)<br>
+      성나게 해서 어지럽게 만든다.<br><br>
 
-    卑而驕之(비이교지)<br>
-    낮추려 들면 교만에 빠뜨리고,<br><br>
+      卑而驕之(비이교지)<br>
+      낮추려 들면 교만에 빠뜨리고,<br><br>
 
-    佚而勞之(일이노지)<br>
-    편안해하면 수고롭게 만들고,<br><br>
+      佚而勞之(일이노지)<br>
+      편안해하면 수고롭게 만들고,<br><br>
 
-    親而離之(친이리지)<br>
-    친하게 지내면 이간질하라.<br><br>
+      親而離之(친이리지)<br>
+      친하게 지내면 이간질하라.<br><br>
 
-    攻其不備(공기부비)<br>
-    방비하지 않은 곳을 공격하고,<br><br>
+      攻其不備(공기부비)<br>
+      방비하지 않은 곳을 공격하고,<br><br>
 
-    出其不意(출기불의)<br>
-    생각하지 못한 곳으로 출격하라.<br><br>
+      出其不意(출기불의)<br>
+      생각하지 못한 곳으로 출격하라.<br><br>
 
-    此兵家之勝(차병가지승)<br>
-    인느 병가에서 승리할 수 있는 길이니,<br><br>
+      此兵家之勝(차병가지승)<br>
+      인느 병가에서 승리할 수 있는 길이니,<br><br>
 
-    不可先傳也(부가선전야)<br>
-    먼저 알려서는 안 된다.<br><br>
-    </p>
+      不可先傳也(부가선전야)<br>
+      먼저 알려서는 안 된다.<br><br>
+    </p><br>
 
 
   [전쟁 전 가늠해야 할 일곱 가지]
 
     <p>
-    故校之以七計, 而塞其情. 曰:<br>
-    고로 일곱 가지 계책을 비교해보아야만 그 정황을 탐색할 수 있으니, 다음과 같이 말할 수 있다.<br><br>
+      故校之以七計, 而塞其情. 曰:<br>
+      고로 일곱 가지 계책을 비교해보아야만 그 정황을 탐색할 수 있으니, 다음과 같이 말할 수 있다.<br><br>
 
-    主孰有道(주숙유도)<br>
-    군주 중에 누가 유능한가?<br><br>
+      主孰有道(주숙유도)<br>
+      군주 중에 누가 유능한가?<br><br>
 
-    將孰有能(장숙유능)<br>
-    장수 중에 누가 유능한가?<br><br>
+      將孰有能(장숙유능)<br>
+      장수 중에 누가 유능한가?<br><br>
 
-    天地孰得(천지숙득)<br>
-    천시와 지리는 누가 얻었는가?<br><br>
+      天地孰得(천지숙득)<br>
+      천시와 지리는 누가 얻었는가?<br><br>
 
-    法令孰行(법령숙행)<br>
-    법령은 누가 잘 시행하는가?<br><br>
+      法令孰行(법령숙행)<br>
+      법령은 누가 잘 시행하는가?<br><br>
 
-    兵衆孰强(병중숙강)<br>
-    병력은 누가 강한가?<br><br>
+      兵衆孰强(병중숙강)<br>
+      병력은 누가 강한가?<br><br>
 
-    士卒孰鍊(사졸숙련)<br>
-    병사들은 어느쪽이 훈련되어 있는가?<br><br>
+      士卒孰鍊(사졸숙련)<br>
+      병사들은 어느쪽이 훈련되어 있는가?<br><br>
 
-    賞罰孰明(상벌숙명)<br>
-    상벌은 누가 분명한가?<br><br>
+      賞罰孰明(상벌숙명)<br>
+      상벌은 누가 분명한가?<br><br>
 
-    吾以此知勝負矣(오이차지승부의)<br>
-    나는 이런 것에 의거해 이기고 지는 것을 알 수 있다.<br>
+      吾以此知勝負矣(오이차지승부의)<br>
+      나는 이런 것에 의거해 이기고 지는 것을 알 수 있다.<br>
     </p><br>
 
 
   [전쟁 전 헤아려야 할 다섯 가지]
 
     <p>
-    故經之以五事, 校之以七計, 而索其情.<br>
-    고로 다섯 가지 원칙과, 일곱 가지 계산으로 비교하여 피아의 상황을 정확히 탐색해야 한다.<br><br>
+      故經之以五事, 校之以七計, 而索其情.<br>
+      고로 다섯 가지 원칙과, 일곱 가지 계산으로 비교하여 피아의 상황을 정확히 탐색해야 한다.<br><br>
 
-    一曰道, 二曰天, 三曰地, 四曰將, 五曰法.<br>
-    첫째는 도이고, 둘째는 하늘(천시)이고, 셋째는 땅(지리)이고, 넷째는 장군이고, 다섯째는 (군)법이다.<br><br>
+      一曰道, 二曰天, 三曰地, 四曰將, 五曰法.<br>
+      첫째는 도이고, 둘째는 하늘(천시)이고, 셋째는 땅(지리)이고, 넷째는 장군이고, 다섯째는 (군)법이다.<br><br>
 
-    道者, 令民與上同意也, 故可與之死, 可與之生, 而不畏危也.<br>
-    도는, 백성들이 상층부가 뜻을 같이 하게 하는 것이다. 이로서 더불어서 죽을 수 있고, 이로서 더불어서 살 수 있게 하니, 위급함을 두려워하지 않는다.<br><br>
+      道者, 令民與上同意也, 故可與之死, 可與之生, 而不畏危也.<br>
+      도는, 백성들이 상층부가 뜻을 같이 하게 하는 것이다. 이로서 더불어서 죽을 수 있고, 이로서 더불어서 살 수 있게 하니, 위급함을 두려워하지 않는다.<br><br>
 
-    天者, 陰陽. 寒暑, 時制也. <br>
-    하늘이란, 낮과 밤, 추위와 더위에 따른 시간의 제약을 말한다.<br><br>
+      天者, 陰陽. 寒暑, 時制也. <br>
+      하늘이란, 낮과 밤, 추위와 더위에 따른 시간의 제약을 말한다.<br><br>
 
-    地者, 遠近. 險易, 廣狹, 死生也.<br>
-    땅이란 멀고 가까움, 평탄하고 험함, 넓고 좁음, 그리고 생지인가 사지인가 하는 것이다.<br><br>
+      地者, 遠近. 險易, 廣狹, 死生也.<br>
+      땅이란 멀고 가까움, 평탄하고 험함, 넓고 좁음, 그리고 생지인가 사지인가 하는 것이다.<br><br>
 
-    將者, 智.信.仁.勇.嚴也.<br>
-    장수는 지혜와 신의, 인의, 용기, 그리고 엄격함이 있어야한다.<br><br>
+      將者, 智.信.仁.勇.嚴也.<br>
+      장수는 지혜와 신의, 인의, 용기, 그리고 엄격함이 있어야한다.<br><br>
 
-    法者, 曲制 官道 主用也.<br>
-    법이란 곡제, 관도, 주용에 대한 것이다.<br><br>
+      法者, 曲制 官道 主用也.<br>
+      법이란 곡제, 관도, 주용에 대한 것이다.<br><br>
 
-    凡此五者, 將莫不聞, 知之者勝, 不知者不勝.<br>
-    이 5가지는 장군이라면 마땅히 모르는 이가 없어여 할 것이니, 아는 자는 승리하고 모르는 자는 이길 수 없을 것이다.<br>
+      凡此五者, 將莫不聞, 知之者勝, 不知者不勝.<br>
+      이 5가지는 장군이라면 마땅히 모르는 이가 없어여 할 것이니, 아는 자는 승리하고 모르는 자는 이길 수 없을 것이다.<br>
 
     </p><br>
 
@@ -175,56 +207,56 @@
   [노자도덕경 제 30장]
 
     <p>
-    以道佐人主者   이도좌인주자<br>
-    도를 깨달아 임금을 보좌하는 사람은<br><br>
+      以道佐人主者   이도좌인주자<br>
+      도를 깨달아 임금을 보좌하는 사람은<br><br>
 
-    不以兵强天下   불이병강천하<br>
-    무력으로 강하게 하려고 하지 않는다.<br><br>
+      不以兵强天下   불이병강천하<br>
+      무력으로 강하게 하려고 하지 않는다.<br><br>
 
-    其事好還  기사호환<br>
-    무력의 댓가는 반드시 돌아온다<br><br>
+      其事好還  기사호환<br>
+      무력의 댓가는 반드시 돌아온다<br><br>
 
-    師之所處  사지소처<br>
-    군대가 머물은 곳에는<br><br>
+      師之所處  사지소처<br>
+      군대가 머물은 곳에는<br><br>
 
-    荊棘生焉  형극생언<br>
-    가시덤불이 자라고<br><br>
+      荊棘生焉  형극생언<br>
+      가시덤불이 자라고<br><br>
 
-    大軍之後  대군지후<br>
-    큰 전쟁이 일어난 후에는<br><br>
+      大軍之後  대군지후<br>
+      큰 전쟁이 일어난 후에는<br><br>
 
-    必有凶年  필유흉년<br>
-    반드시 흉년이 따른다.<br><br>
+      必有凶年  필유흉년<br>
+      반드시 흉년이 따른다.<br><br>
 
-    善者果而已  선자과이이<br>
-    올바른자는 열매를 볼 뿐<br><br>
+      善者果而已  선자과이이<br>
+      올바른자는 열매를 볼 뿐<br><br>
 
-    不敢以取强  불감이취강<br>
-    감히 강제하는 일을 하지 않는다<br><br>
+      不敢以取强  불감이취강<br>
+      감히 강제하는 일을 하지 않는다<br><br>
 
-    果而勿矜   과이물긍<br>
-    열매를 거두되 뽐내지 않고<br><br>
+      果而勿矜   과이물긍<br>
+      열매를 거두되 뽐내지 않고<br><br>
 
-    果而勿伐   과이물벌<br>
-    열매를 거두되 자랑하지않고<br><br>
+      果而勿伐   과이물벌<br>
+      열매를 거두되 자랑하지않고<br><br>
 
-    果而勿驕   과이물교<br>
-    열매를 거두되 교만하지않고<br><br>
+      果而勿驕   과이물교<br>
+      열매를 거두되 교만하지않고<br><br>
 
-    果而不得已  과이부득이<br>
-    단지 부득이 해서 그리된 것일 뿐이니<br><br>
+      果而不得已  과이부득이<br>
+      단지 부득이 해서 그리된 것일 뿐이니<br><br>
 
-    果而勿强  과이물강<br>
-    좋은 성과를 올렸다 해서 강함을 과시하려 하지마라.<br><br>
+      果而勿强  과이물강<br>
+      좋은 성과를 올렸다 해서 강함을 과시하려 하지마라.<br><br>
 
-    物壯則老  물장즉노<br>
-    모든 사물은 위세가 극에 달하면 쇠퇴하는 것이니,<br><br>
+      物壯則老  물장즉노<br>
+      모든 사물은 위세가 극에 달하면 쇠퇴하는 것이니,<br><br>
 
-    是謂不道  시위부도<br>
-    이것을 일컬어 도와 멀다 한다.<br><br>
+      是謂不道  시위부도<br>
+      이것을 일컬어 도와 멀다 한다.<br><br>
 
-    不道早已  부도조이<br>
-    도와 멀면 오래 지속되지 못한다.<br>
+      不道早已  부도조이<br>
+      도와 멀면 오래 지속되지 못한다.<br>
   </p><br>
 
 
