--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -75,14 +75,14 @@
       [시장의 기억]-이태호<br>
       [코로나 이후의 세계]-제이슨 솅커<br>
       [디플레 전쟁]-홍춘욱<br>
-      [세상 친절한 경제상식]-토리텔러<br>
+      2X[세상 친절한 경제상식]-토리텔러<br>
       [머니]-롭 무어<br>
       [돈의 속성]-김승호<br>
       [해외 ETF 백과사전]-김태현<br>
       [부자들의 습관 버티는 기술]-김광주<br>
     <h2><strong>역사[Lv.7]</h2></strong>
-      [거의 모든 IT의 역사]-정지훈<br>
-      [약자를 위한 현실주의]-이주희<br>
+      <b>3x[거의 모든 IT의 역사]-정지훈</b><br>
+      2x[약자를 위한 현실주의]-이주희<br>
       [알렉산드로스 제국의 눈물]-제임스 롬<br>
       [하멜표류기]-헨드릭 하멜<br>
       [하룻밤에 읽는 한국 근현대사]-최용범<br>
@@ -98,7 +98,7 @@
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
       [삶이 괴롭냐고 심리학이 물었다]-게일 브레너<br>
     <h2><strong>처세술[Lv.7]</h2></strong>
-      [침묵이라는 무기]-코르넬리아 토프<br>
+      2x[침묵이라는 무기]-코르넬리아 토프<br>
       [마음을 훔치는 대화법]-임철웅<br>
       [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤<br>
       [승자의 결단과 전략, 오륜서]-마야모토 무사시<br>
@@ -107,15 +107,15 @@
       [포사이트:미래를 꿰뚫어보는 힘]-비나 벤카타라만<br>
     <h2><strong>과학[Lv.2]</h2></strong>
       [창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
-      [기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
+      2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
     <h2><strong>경영[Lv.3]</h2></strong>
-      [적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단<br>
+      <b>3X[적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단</b><br>
       [채리티:워터]-스캇 해리슨<br>
       [반대의 놀라운 힘]-샬런 네메스<br>
     <h2><strong>소설[Lv.6]</h2></strong>
       [82년생 김지영]-조남주<br>
       [잠]-베르나르 베르베르<br>
-      [삼국지]-나관중<br>
+      <b>20X[삼국지]-나관중</b><br>
       [데미안]-헤르만 헤세<br>
       [위대한 개츠비]-스콧 피츠제럴드<br>
       [별을 위한 시간]-로버트 A. 하인라인<br>
@@ -136,7 +136,7 @@
 
 
     <p><pre>
-      <h2>2020년 6월 독서</h2>
+      <h2>2020년 7월 독서</h2>
         <li>경제/경영:</li>
         <li>역사:</li>
         <li>철학:</li>
@@ -157,7 +157,7 @@
         <li>경제:[해외 ETF 백과사전]-김태현</li>
         <li>사회:[협력의 역설]-애덤 카헤인</li>
         <li>경제:[부자들의 습관 버티는 기술]-김광주</li>
-        <li>처세술:[손자병법]-손자</li>
+        <li>처세술:[손자병법]-손무</li>
     </p></pre>
 
     <p><pre>
