--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -51,6 +51,11 @@
 
 
 
+    [july 5th,2020]
+
+    <p>
+      One of the Fed's innovations was to offer longer-term swaps lasting 84 days. The first of these matured on June 11th, reducing the amount of dollars outstanding by almost $92bn. If the foreign banks that had borrowed these dollars (through the Bank of England's and the European Central Bank's swap lines with the Fed) still needed them, they would have rolled them over. But they did not--suggesting that the swaps had eased much of the stress that motivated them.
+    </p><br>
 
 
     [July 3rd, 2020]
