--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -52,6 +52,14 @@
 
 
 
+    <a href="https://www.youtube.com/watch?v=IZO4PU7oAGo" target="_blank" title="5분 뚝딱 철학">
+      니체 : 니체 : 신은 죽었다. part 2</a><br>
+
+    <a href="https://www.youtube.com/watch?v=4bmQ0dztq7A" target="_blank" title="5분 뚝딱 철학">
+      니체 : 신은 죽었다. part 1</a><br>
+
+    <a href="https://www.youtube.com/watch?v=wNyv84wu_xM" target="_blank" title="5분 뚝딱 철학">
+      비트겐슈타인 : 논리철학논고</a><br>
 
     <a href="https://www.youtube.com/watch?v=sV6lLH-m40A" target="_blank" title="5분 뚝딱 철학">
       조건문의 진리조건</a><br>
