--- a/Stock_investment.html
+++ b/Stock_investment.html
@@ -52,6 +52,23 @@
 
 
 
+
+
+    <a href="https://www.youtube.com/watch?v=Az9GebXQJVs" taregt="_blank" target="시간여행TV">
+      시간여행TV의 주식투자전략 5강 - 주식시장 사건사고 (1)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Y3FoyyRffUc" taregt="_blank" target="시간여행TV">
+      시간여행TV의 주식투자전략 4강 - 소형주 매매법(4)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=5KfH4hlqQuM" taregt="_blank" target="시간여행TV">
+      시간여행TV의 주식투자전략 3강 - 소형주 매매법(3)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=Rcko6-qe32M" taregt="_blank" target="시간여행TV">
+      시간여행TV의 주식투자전략 2강 - 소형주매매법(2)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=n288ttmDhnA" taregt="_blank" target="시간여행TV">
+      시간여행TV의 주식투자전략 1강 - 소형주 매매법(1)</a><br>
+
     <a href="https://www.youtube.com/watch?v=tpwQFw7Fpjk" target="_blank" title="돈파는가게_세상의 모든 재테크">
       개인과 기관투자자의 생각과 행동은 어떻게 다를까?_조성연소장(펀펀한 투자연구소)</a><br>
 
