--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -57,6 +57,84 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=3F7QoTcqSTg" title="Red Pig Academy">
+    유비는 착한 쪼다가 아니다[임용한의 진짜 三國志_15]유비도 계획이 있었다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=x5C4hQ0Aqys" title="Red Pig Academy">
+    모욕감 느끼고 시작한 유비[임용한의 진짜三國志_14]소설에는 절대 없는 이야기</a><br>
+
+  <a href="https://www.youtube.com/watch?v=nxgFRlhp9DM" title="Red Pig Academy">
+    영웅들의 본격적인 리턴매치가 시작된다![임용한의 진짜 三國志_13] 조조와여포의 맞짱승부</a><br>
+
+  <a href="https://www.youtube.com/watch?v=fUriLtYsvw0" title="Red Pig Academy">
+    끝없는 논란,서주공방전. [임용한의 진짜 三國志_12]조조스러운 만행인가 전술적 선택인가. 그 진실은?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=T0XNBfxeY_0" title="Red Pig Academy">
+    쓰리 킹덤의 본격 시작. 드디어! 조조가 조조하기 시작했다[임용한의 진짜 三國志_11]조조가 서주로 간 까닭은?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=pvPZd9h7nzI" title="Red Pig Academy">
+    조조가 탐낸 원탑 영웅. 정사 삼국지 속의 '손책' [임용한의 진짜 三國志_10] 강동의 아이돌 소패왕. 오나라의 기틀을 세우다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=9WM9C5NRv2I" title="Red Pig Academy">
+    무력 1진, 지략 1진, 야망 1진. 모든걸 가졌던 강동의 호랑이 손견. [임용한의 진짜 三國志_09] 관운장 급 활약과 사망의 미스테리</a><br>
+
+  <a href="https://www.youtube.com/watch?v=dZa7O-W_jJU" title="Red Pig Academy">
+    그것이 알고싶다. [황건적 장각과 태평도의 비밀] - 그들의 정체는?* [임용한의 진짜 三國志_08] 전 중국을 뒤흔든 [황건적의 난]과 도술의 도적 [장각]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=sQA0Xb3lAv0" title="Red Pig Academy">
+    백마장군의 처참한 최후[임용한의 진짜 三國志_07] 조조 성장의 밑거름이 되다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ZzDRJPuFpuU" title="Red Pig Academy">
+    유비의 큰형님 백마의종 공손찬[임용한의 진짜 三國志_06]소설과 다른 치열했던 공손찬의 삶</a><br>
+
+  <a href="https://www.youtube.com/watch?v=WlfFMmhAnFk" title="Red Pig Academy">
+    조조가 아니다. 진짜는 따로있다. 관도대전 3부. 팩트체크[임용한의 진짜 三國志_05] 나관중 창작법 전격해부</a><br>
+
+  <a href="https://www.youtube.com/watch?v=VRaNxjLnU4o" title="Red Pig Academy">
+    조조. 패권의 중심을 잡다. 관도대전II-영화보다 재미있다☆[임용한의 진짜 三國志_ 04]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=EXp7JIc4H7I" title="Red Pig Academy">
+    최대세력 원소 VS 최고두뇌 조조. 관도대전1. 영화보다 재미있다☆임용한의 진짜 삼국지 [三國志_ 03]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=OzQplHsPBoM" title="Red Pig Academy">
+    적과의 동행. 원소 vs 원술-영화보다 재미있다☆ '임용한의 진짜 삼국지'[三國志_02]아낌없이 주는 나무- 원소Ⅱ</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ojtWX1CJEm8" title="Red Pig Academy">
+    거대전쟁의 서막. 세력의 탄생. 원소-영화보다 재미있다 ☆임용한의 진짜 삼국지[三國志_ 01]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Zi-fOm5IrCw" title="Red Pig Academy">
+    이 쯤에서 꼭 다시봐야 할 관도대전 3편을 한번에...!![임용한의 진짜 三國志_번외편]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=CoiXNky3tHY" title="국방TV">
+    [순삭밀톡]삼국지뒤집기★유비, 패왕인가? 성군인가? 유비패왕설의 진실</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_mbmrZ2oFhQ" title="국방TV">
+    [순삭밀톡]삼국지뒤집기★완벽캐 제갈량이 뻥(?)캐릭터였다니!!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=eV-sSop-DFE" title="국방TV">
+    삼국지뒤집기16★나관중도 열폭시킨 사기캐 주유, 전격해부!(순삭밀톡)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=4ZVE2vln5zo" title="국방TV">
+    [순삭밀톡] 삼국지뒤집기 ★ 육손 뒷담화 몰아보기</a><br>
+
+  <a href="https://www.youtube.com/watch?v=awaBBGLWz1A" title="국방TV">
+    [순삭밀톡] 삼국지뒤집기 ★ 적벽대전 몰아보기</a><br>
+
+  <a href="https://www.youtube.com/watch?v=270NLc-16Gc" title="국방TV">
+    [순삭밀톡] 삼국지뒤집기 ★ 장비 몰아보기</a><br>
+
+  <a href="https://www.youtube.com/watch?v=OhLoX3QrRzs" title="국방TV">
+    [순삭밀톡] 삼국지뒤집기 ★ 황충 뒷담화 몰아보기</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_WJc2nUZOAY" title="국방TV">
+    [순삭밀톡] 삼국지뒤집기★ 유비 뒷담화 몰아보기</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ju757Gw_GsY" title="국방TV">
+    삼국지뒤집기18★임용한박사를 겁나게 한 하후돈!(순삭밀톡)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=bIfB1J1Qo0I" title="국방TV">
+    삼국지뒤집기17★입구는 있어도 출구는 없음, 입덕하면 출구 없다는 조자룡의 묵직한 마성 비결(순삭밀톡)</a><br>
+
   <a href="https://www.youtube.com/watch?v=COBKvwO9DpE" title="국방TV">
     [순삭밀톡]삼국지뒤집기★조조 뒷담화 몰아보기</a><br>
 
