--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -53,6 +53,9 @@
 
 
 
+    <a href="https://www.youtube.com/playlist" target="_blank" title="쉬운바둑">
+      정석사활 #5</a><br>
+
     <a href="https://www.youtube.com/watch?v=go3egSgZHfQ" target="_blank" title="쉬운바둑">
       정석사활 #4</a><br>
 
