--- a/夫學須靜也_才須學也.html
+++ b/夫學須靜也_才須學也.html
@@ -51,8 +51,48 @@
 
 
 
+  <h3>[질질 끌면 패망한다]</h3>
 
-  [비용을 계산하라]
+    <p>
+      其用戰也貴勝(기용전야귀승)<br>
+      전쟁을 하는 데에는 승리를 귀히 여긴다.<br><br>
+
+      久則鈍兵挫銳(구칙둔병좌예)<br>
+      질질 끌면 무기는 둔해지고 사기는 꺾여<br><br>
+
+      攻城則力屈(공성칙력굴)<br>
+      성을 공격해도 힘만 소진된다.<br><br>
+
+      久暴師則國用不足(구포사칙국용부족)<br>
+      오랜 기간 군대를 햇빛에 노출시키면 나라의 비용이 부족해진다.<br><br>
+
+      夫鈍兵挫銳(부둔병좌예) 屈力殫貨(굴력탄화)<br>
+      무기가 무뎌지고 사기가 꺾이고 힘이 소진되고 재정이 바닥나면,<br><br>
+
+      則諸侯乘其弊而起(칙제후승기폐이기)<br>
+      다른 제후들이 그피폐함을 틈타 일어난다.<br><br>
+
+      雖有智者(수유지자) 不能善其后矣(부능선기후의)<br>
+      비록 지혜로운 자가 있다 하더라도, 그 뒤를 잘 수습할 수 없게 된다.<br><br>
+
+      故兵聞拙速(고병문졸속)<br>
+      고로 용병법에서 "어설프지만 속전속결해야 한다"는 말은 들어보았지만,<br><br>
+
+      未睹巧之久也(미도교지구야)<br>
+      교묘하게 질질 끄는 경우는 본 적이 없다.<br><br>
+
+      夫兵久而國利者(부병구이국리자) 未之有也(미지유야)<br>
+      전쟁을 오래 끌어서 나라에 이로운 경우는 아직까지 없었다.<br><br>
+
+      故不盡知用兵之害者(고부진지용병지해자)<br>
+      그러므로 용병의 해로움을 이루 다 알지 못하는 자는<br><br>
+
+      則不能盡知用兵之利也(칙부능진지용병지리야)<br>
+      용병의 이로움도 이루 다 알 수 없는 것이다.<br><br>
+    </p><br>
+
+
+  <h3>[비용을 계산하라]</h3>
 
     <p>
       孫子曰(손자왈) 凡用兵之法(범용병지법) 馳車千駟(치거천사) 革車千乘(혁거천승) 帶甲十萬(대갑십만) 千里饋糧(천리궤량)<br>
@@ -63,7 +103,7 @@
     <p><br>
 
 
-  [싸우기 전에 계산하라]
+  <h3>[싸우기 전에 계산하라]</h3>
 
     <p>
       夫未戰而廟算勝者(부미전이묘산승자) 得算多也(득산다야)<br>
@@ -83,7 +123,7 @@
     </p><br>
 
 
-  [전쟁은 속임수이다]
+  <h3>[전쟁은 속임수이다]</h3>
 
     <p>
       勢者(세자) 因利而制權也(인리이제권야)<br>
@@ -142,7 +182,7 @@
     </p><br>
 
 
-  [전쟁 전 가늠해야 할 일곱 가지]
+  <h3>[전쟁 전 가늠해야 할 일곱 가지]</h3>
 
     <p>
       故校之以七計, 而塞其情. 曰:<br>
@@ -174,7 +214,7 @@
     </p><br>
 
 
-  [전쟁 전 헤아려야 할 다섯 가지]
+  <h3>[전쟁 전 헤아려야 할 다섯 가지]</h3>
 
     <p>
       故經之以五事, 校之以七計, 而索其情.<br>
@@ -204,7 +244,7 @@
     </p><br>
 
 
-  [노자도덕경 제 30장]
+  <h3>[노자도덕경 제 30장]</h3>
 
     <p>
       以道佐人主者   이도좌인주자<br>
@@ -260,7 +300,7 @@
   </p><br>
 
 
-  [전쟁은 존망을 결정한다]
+  <h3>[전쟁은 존망을 결정한다]</h3>
 
     <p>
       孫子曰: 兵者, 國之大事. 死生之地, 存亡之道, 不可不察也.<br>
